# pico-examples

./: CMakeLists.txt  README.md
adc/hello_adc/: CMakeLists.txt  hello_tmp36.c
clocks/hello_gpout/: hello_gpout.c
freertos/hello_freertos/: hello_freertos.c
i2c/ht16k33_i2c/: ht16k33_i2c.c
i2c/lcd_1602_i2c/: lcd_1602_i2c.c
i2c/mpu6050_i2c/: mpu6050_i2c.c
i2c/slave_mem_i2c/: CMakeLists.txt  slave_mem_i2c.c
mbedtls/: CMakeLists.txt  mbedtls_config.h  rsa.c
pico_w/: CMakeLists.txt  lwipopts_examples_common.h
pico_w/access_point/: CMakeLists.txt  picow_access_point.c
pico_w/bt/: picow_bt_example_common.c
pico_w/bt/gatt_counter/: CMakeLists.txt
pico_w/bt/hog_keyboard_demo/: CMakeLists.txt  flash_bank_hid.c
pico_w/freertos/iperf/: lwipopts.h
pico_w/freertos/ping/: lwipopts.h
pico_w/tls_client/: CMakeLists.txt
pico_w/wifi/: lwipopts_examples_common.h  mbedtls_config_examples_common.h
pico_w/wifi/blink/: CMakeLists.txt  picow_blink_slow_clock.c
pico_w/wifi/http_client/: CMakeLists.txt  example_http_client_util.c  example_http_client_util.h  http_common.c  lwipopts.h  mbedtls_config.h  picow_http_client.c  picow_http_verify.c
pico_w/wifi/http_client/http_client_mod/: CMakeLists.txt  http_client_mod.c  http_client_mod.h
pico_w/wifi/iperf/: CMakeLists.txt
pio/hello_pio/: hello.c
pio/uart_rx/: uart_rx.c  uart_rx_intr.c
pio/uart_tx/: uart_tx.c
pio/ws2812/: ws2812.c  ws2812_parallel.c
powman/: CMakeLists.txt  powman_example.c  powman_example.h
powman/powman_gpio/: CMakeLists.txt  powman_gpio.c
powman/powman_timer/: CMakeLists.txt  powman_timer.c
sleep/: CMakeLists.txt
sleep/hello_dormant/: hello_dormant.c
sleep/hello_dormant_rtc/: CMakeLists.txt  hello_dormant_rtc.c
sleep/hello_sleep/: CMakeLists.txt  hello_sleep.c  hello_sleep_alarm.c  hello_sleep_rtc.c
sleep/hello_sleep_usb/: CMakeLists.txt  hello_sleep_usb.c
sleep/sleep_temperature_sensor/: CMakeLists.txt  sleep_temperature_sensor.c
spi/: CMakeLists.txt
spi/cpol/: CMakeLists.txt  spi_cpol.c
usb/host/host_cdc_msc_hid/: CMakeLists.txt  main.c
